apps/ocis/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ocis
  annotations:
    volsync.backube/privileged-movers: "true"
